--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body,html{
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 #board,#numbers{
     display: flex;
@@ -21,4 +22,34 @@ body,html{
 }
 .selected{
     background-color: aquamarine;
+}
+#container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+#last{
+    margin: 10px;
+    display: flex;
+    width: 270px;
+    justify-content: end;
+    gap: 20px;
+}
+.small{
+    width: fit-content;
+    border: solid black 1px;
+    padding: 2px;
+}
+.thick-top{
+    border-top: 3px solid black;
+}
+.thick-btm{
+    border-bottom:  3px solid black; 
+}
+.thick-left{
+    border-left:  3px solid black;;
+}
+.thick-right{
+    border-right:  3px solid black; ;
 }
