--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body,html{
     
 }
 .cell,.numss{
-    border:solid black 1px;
+    border:solid rgb(103, 100, 100) 1px;
     box-sizing: border-box;
     justify-content: center;
     align-items: center;
@@ -21,7 +21,7 @@ body,html{
     margin-top: 20px;
 }
 .selected{
-    background-color: aquamarine;
+    background-color: rgb(163, 222, 239);
 }
 #container{
     display: flex;
@@ -52,4 +52,8 @@ body,html{
 }
 .thick-right{
     border-right:  3px solid black; ;
+}
+.OG-clrs{
+    color: rgb(11, 124, 238);
+    background-color: rgb(220, 248, 248);
 }
